--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 13 07:45:58 CST 2021
-sdk.dir=/Users/wangzy/software/android-sdk-macosx
+#Thu Jun 10 20:10:33 CST 2021
+sdk.dir=/Users/hss/Library/Android/sdk
+ndk.dir=/Users/hss/fluttersdk/android-ndk-r14b
